@@ -1,3 +1,7 @@
+2011-01-17  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gedit.R (.svalue<-): fix to svalue and init_msg
+
 2011-01-10  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gdroplist.R (.as.gWidgetsRGtk2.gdroplist): [<- remembers where
